# yap-health

./: .gitignore  CLAUDE.md  README.md
backend/: pyproject.toml
backend/app/: cli.py  config.py
backend/app/api/: main.py
backend/app/db/: database.py  models.py
backend/app/domain/: aggregation.py  metrics.py  service.py
backend/app/ingestion/: base.py  clue.py  health_connect.py  health_sync_csv.py  health_sync_workouts.py  persist.py  runner.py  source.py  watcher.py
backend/app/rules/: evaluation.py  insights.py  scoring.py  targets.py
backend/tests/: test_aggregation.py  test_api.py  test_clue_importer.py  test_evaluation.py  test_health_connect_importer.py  test_health_sync_csv.py  test_ingestion_base.py  test_insights.py  test_models.py  test_persist.py  test_runner.py  test_scoring.py  test_service.py  test_source.py  test_sync.py  test_workout_importer.py
backend/tests/fixtures/: make_hc_fixture.py
docs/superpowers/plans/: 2026-06-05-yap-health-v1.md
docs/superpowers/specs/: 2026-06-05-yap-health-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AlertsFeed.tsx  CycleCard.tsx  MetricChart.tsx  ScoreCard.test.tsx  ScoreCard.tsx  SyncButton.tsx
frontend/src/components/ui/: badge.tsx  card.tsx
frontend/src/lib/: api.ts  flow.ts
frontend/src/pages/: Cycle.tsx  Domain.tsx  Home.tsx
